--- a/charts/argo/templates/workflow-sa.yaml
+++ b/charts/argo/templates/workflow-sa.yaml
@@ -1,20 +1,34 @@
-{{- if .Values.workflow.serviceAccount.create -}}
-{{- if .Values.workflow.namespaces -}}
-  {{ $namespaces := .Values.workflow.namespaces }}
-{{- else if .Values.workflow.namespace }}
-  {{ $namespaces := tuple .Values.workflow.namespace }}
-{{- else }}
-  {{ $namespaces := tuple "argo" }}
-{{- range $namespaces }}
+{{- define "sa-template" }}
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.workflow.serviceAccount.name }}
-  namespace: {{ . }}
-  {{- with .Values.workflow.serviceAccount.annotations }}
+{{- end }}
+
+{{- if .Values.workflow.serviceAccount.create -}}
+  {{- if .Values.workflow.namespaces -}}
+    {{ $namespaces := .Values.workflow.namespaces }}
+    {{- range $namespaces }}
+      {{ $namespace := . }}
+      {{ include "sa-template" . }}
+  name: {{ $.Values.workflow.serviceAccount.name }}
+  namespace: {{ $namespace }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-{{- end }}
-{{- end }}
-{{- end }}
+    {{- toYaml $.Values.workflow.serviceAccount.annotations | nindent 4 }}
+    {{- end }}
+
+  {{- else if .Values.workflow.namespace }}
+    {{ $namespace := .Values.workflow.namespace }}
+    {{ include "sa-template" . }}
+  name: {{ $.Values.workflow.serviceAccount.name }}
+  namespace: {{ $namespace }}
+  annotations:
+    {{- toYaml $.Values.workflow.serviceAccount.annotations | nindent 4 }}
+
+  {{- else }}
+    {{ include "sa-template" . }}
+  name: {{ $.Values.workflow.serviceAccount.name }}
+  annotations:
+    {{- toYaml $.Values.workflow.serviceAccount.annotations | nindent 4 }}
+  {{- end }}
 {{- end }}
