--- a/charts/argo/templates/workflow-rb.yaml
+++ b/charts/argo/templates/workflow-rb.yaml
@@ -1,19 +1,51 @@
-{{- if .Values.workflow.rbac.create -}}
+{{- define "workflow-rb-base" }}
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Release.Name }}-workflow
-{{- if .Values.workflow.namespace }}
-  namespace: {{ .Values.workflow.namespace }}
 {{- end }}
+
+{{- define "workflow-rb-roleref" }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ .Release.Name }}-workflow
+{{- end }}
+
+{{- define "workflow-rb-subjects" }}
 subjects:
-- kind: ServiceAccount
-  name: {{ .Values.workflow.serviceAccount.name }}
-  {{- if .Values.workflow.namespace }}
+  - kind: ServiceAccount
+{{- end }}
+
+{{- if .Values.workflow.rbac.create -}}
+
+  {{- if .Values.workflow.namespaces }}
+
+    {{- range .Values.workflow.namespaces }}
+      {{ $namespace := . }}
+      {{ include "workflow-rb-base" . }}
+  name: {{ $.Release.Name }}-workflow
+  namespace: {{ $namespace }}
+      {{- include "workflow-rb-roleref" . }}
+  name: {{ $.Release.Name }}-workflow
+      {{- include "workflow-rb-subjects" . }}
+    name: {{ $.Values.workflow.serviceAccount.name }}
+    namespace: {{ $namespace }}
+    {{- end }}
+
+  {{- else }}
+
+    {{ include "workflow-rb-base" . }}
+  name: {{ .Release.Name }}-workflow
+    {{- if .Values.workflow.namespace }}
   namespace: {{ .Values.workflow.namespace }}
+    {{- end }}
+    {{- include "workflow-rb-roleref" . }}
+  name: {{ .Release.Name }}-workflow
+    {{- include "workflow-rb-subjects" . }}
+    name: {{ .Values.workflow.serviceAccount.name }}
+      {{- if .Values.workflow.namespace }}
+    namespace: {{ .Values.workflow.namespace }}
+      {{- end }}
+
   {{- end }}
 {{- end }}
