--- a/charts/argo/templates/workflow-sa.yaml
+++ b/charts/argo/templates/workflow-sa.yaml
@@ -8,8 +8,7 @@ metadata:
 {{- if .Values.workflow.serviceAccount.create -}}
   {{- if .Values.workflow.namespaces -}}
 
-    {{ $namespaces := .Values.workflow.namespaces }}
-    {{- range $namespaces }}
+    {{- range .Values.workflow.namespaces }}
       {{ $namespace := . }}
       {{ include "sa-base" . }}
   name: {{ $.Values.workflow.serviceAccount.name }}
@@ -22,8 +21,8 @@ metadata:
 
     {{ include "sa-base" . }}
   name: {{ .Values.workflow.serviceAccount.name }}
-    {{- if $.Values.workflow.namespace }}
-  namespace: {{ $.Values.workflow.namespace }}
+    {{- if .Values.workflow.namespace }}
+  namespace: {{ .Values.workflow.namespace }}
     {{- end }}
   annotations:
     {{- toYaml .Values.workflow.serviceAccount.annotations | nindent 4 }}
