--- a/charts/argo/templates/workflow-role.yaml
+++ b/charts/argo/templates/workflow-role.yaml
@@ -1,25 +1,34 @@
-{{- if .Values.workflow.rbac.create -}}
+{{- define "workflow-role-base" }}
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+{{- end }}
+
+{{- define "workflow-role-rules" }}
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+    verbs:
+      - get
+      - watch
+      - patch
+  - apiGroups:
+      - ""
+    resources:
+      - pods/log
+    verbs:
+      - get
+      - watch
+{{- end }}
+
+{{- if .Values.workflow.rbac.create -}}
+  {{ include "workflow-role-base" }}
   name: {{ .Release.Name }}-workflow
   {{- if .Values.workflow.namespace }}
   namespace: {{ .Values.workflow.namespace }}
   {{- end }}
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - get
-  - watch
-  - patch
-- apiGroups:
-  - ""
-  resources:
-  - pods/log
-  verbs:
-  - get
-  - watch
+  {{ include "workflow-role-rules" }}
 {{- end }}
